# tauri-plugin-audio

./: .markdownlint-cli2.cjs  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.test.json
crates/audio-player/: Cargo.toml
crates/audio-player/src/: error.rs  lib.rs  models.rs  player.rs  transitions.rs  wsola.rs
crates/audio-player/src/player/: http.rs  mod.rs  prebuffered.rs  source.rs  stretch.rs  symphonia.rs
crates/audio-player/tests/: audible.rs
crates/signalsmith/: Cargo.toml
crates/signalsmith/src/: lib.rs  playback.rs
crates/signalsmith/src/port/: complex.rs  fft.rs  mod.rs  stft.rs  stretch.rs
crates/signalsmith/tests/: rodio_audible.rs
examples/tauri-app/: package-lock.json
examples/tauri-app/src/: App.vue
examples/tauri-app/src-tauri/: Cargo.toml
guest-js/: actions.ts  index.test.ts  index.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
