[package]
name = "audio-player"
version = "0.1.0"
description = "Audio playback engine based on Rodio"
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-mp3", "symphonia-wav", "symphonia-flac", "symphonia-ogg", "symphonia-vorbis", "symphonia-isomp4", "symphonia-aac", "symphonia-pcm"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", default-features = false, features = ["std", "log"] }
ureq = "2.12.1"
