[package]
name = "audio-player"
version = "0.1.0"
description = "Audio playback engine based on Rodio"
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
serde = { version = "1.0.228", features = ["derive"] }
signalsmith-stretch = "0.1.3"
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", default-features = false, features = ["std", "log"] }
ureq = "2.12.1"
