[package]
name = "tauri-app"
version = "0.0.0"
edition = "2024"
rust-version = "1.89"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-audio = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

# Optimize audio decoding and WSOLA in dev builds so `tauri dev` is usable.
# Without this, the eager PCM decode and time-stretch run ~20-50× slower.
[profile.dev.package.audio-player]
opt-level = 3

[profile.dev.package.rodio]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-core]
opt-level = 3

[profile.dev.package.symphonia-format-isomp4]
opt-level = 3

[profile.dev.package.symphonia-codec-aac]
opt-level = 3
